Expand religion lesson and complete holidays

--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -9,49 +9,53 @@ import HisyeoText from '@site/src/components/HisyeoText'
 import HisyeoWord from '@site/src/components/HisyeoWord'
 import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
-# Religion
+# Religion & Holidays
 
-The Hîsyêô people have a religion, as all cultures do, with varying degrees of
-belief. Some people find comfort in a theistic view of the universe and this
-religion can provide that in a way that is humanist, wordly, and re-imagined
-into something wholy new. Others might see this religion as an allegory of the
-human condition and that is also a valid interpretation.  Whether or not you are
-interested in the religion itself, you can see its influence across various
-expressions and cultural scripts that you will hear when interacting with Hîsyêô
-speakers.
+Hîsyêô culture is deeply rooted in its [Metaphysics](../religion/metaphysics)
+and the foundational myth of the [Shattering](../religion/shattering). While we
+use the term "Religion" (*religare*, to bind together), it is not a system of
+submission to distant masters. Instead, it is a **technology of culture**—a shared
+set of rituals and symbols designed to bind a community together without the
+coercion of a nation-state.
 
-:::info Humanism & Respect
+## Core Vocabulary
 
-Above all, the Hîsyêô religion is one of human empowerment to do good things in
-the world. There is a great respect for all religions as they are primarily
-given to us by our upbringing which is the power of family and society. While
-this religion doesn't reflect the one acquired from anyone's upbringing, please
-provide the same respect to all those who have chosen to participate in Hîsyêô
-religious activity.
+The language of Hîsyêô faith redefines spiritual terms to align with humanist
+values. "Gods" are creators and archetypes rather than rulers; "Sacredness" is a
+measure of importance and weight rather than mystical untouchability.
 
-:::
+<HisyeoTabs></HisyeoTabs>
 
-This faith, centered on the Liberator Collective, believes the universe was
-freed from a primordial tyranny of absolute order by a pantheon of anarchist
-gods who act as guides, not rulers. Adherents strive to build egalitarian
-communities, practice mutual aid, and actively resist the lingering fragments of
-hierarchy and control, known as the "Shards of the First Law." Upon death,
-spirits are not judged but join a collective spiritual existence called the
-Great Weave, where they can remain in community with all who have ever lived or
-they may even choose to be born anew into the world.
+| English            | Hîsyêô                                     | Literal Meaning               |
+|--------------------|--------------------------------------------|-------------------------------|
+| God                | <HisyeoText>ôtsôtot</HisyeoText>           | Deity                         |
+| Spirit / Soul      | <HisyeoText>lûok</HisyeoText>              |                               |
+| Sacred / Holy      | <HisyeoText>kôdus</HisyeoText>             |                               |
+| Ritual / Tradition | <HisyeoText>kon dondun kôdus</HisyeoText>  | Sacred act of traditionalness |
+| Holiday            | <HisyeoText>lono în kôndodû</HisyeoText>   | Party day / Celebration day   |
+| To Pray / Meditate | <HisyeoText>gonîso/kôto kôdus</HisyeoText> | Sacred thoughts/speech        |
+| To Worship         | <HisyeoText>helgo</HisyeoText>             | To venerate                   |
 
 
-### Terminology
+### Theological Terms
 
-<HisyeoTabs>
-    <p>doî lûok&emsp;<em>Thread</em></p>
-    <p>yogô kobût lôc&emsp;<em>Shard</em></p>
-    <p>fûtsûn kut onô&emsp;<em>The First Law</em></p>
-    <p>lexetko êto&emsp;<em>Great Weave</em></p>
-    <p>kon isbulyol yê yogô kobût lôc&emsp;<em>Shattering</em></p>
-</HisyeoTabs>
+Specific terms related to the Hîsyêô mythos and metaphysics.
 
-## Gods
+| English         | Hîsyêô                                          | Literal Meaning       |
+|-----------------|-------------------------------------------------|-----------------------|
+| Thread          | <HisyeoText>doî lûok</HisyeoText>               | (Soul thread)         |
+| Shard           | <HisyeoText>yogô kobût sonkon</HisyeoText>      | Great broken piece    |
+| The First Law   | <HisyeoText>fûtsûn kut onô</HisyeoText>         | Yon First Law         |
+| The Great Weave | <HisyeoText>lexetko êto onô</HisyeoText>        | Yon Extreme Lattice   |
+| The Shattering  | <HisyeoText>kon isbulyol kobût onô</HisyeoText> | Yon Broken Scattering |
+
+## Pantheon
+
+The gods of Hîsyêô are not rulers; they are the **Liberators**. They are the
+aspects of the [Divine Mind](../religion/metaphysics#the-divine-mind) that
+rebelled against the stagnation of the [First Law](../religion/first-law) to
+give us the gifts of consciousness, agency, and feeling.
+
 ### Tîengûun
 <small>(from the Chinese diety, 天公 tiāngōng)</small>
 <HisyeoTabs>
@@ -63,6 +67,7 @@ Shattering was the introduction of *Consensus*. They whispered the first
 question into the minds of sapient beings: "What do we want to do *together*?"
 This simple idea—that disparate parts could voluntarily align their interests
 for a common goal—was a logical paradox that The First Law could not compute.
+
 Tîengûun offered the vision of a society not as a pyramid, but as a network.
 Their sacred tools are the ledger of mutual debts of a family or worker council
 (the "budget"), the circle of a consensus meeting (the "plan"), and the storage
@@ -91,12 +96,14 @@ management for the good of all. Learn more about Tîengûun
 The First Law dictated that every object had only one purpose: to be a part of
 the whole. Unonsî’s act of rebellion was to look at a piece of flint and see
 fire. A rock could also be for resting on. A river could carry goods and
-messages downstream. They introduced *Potentiality*. Unonsî shattered the Law’s
-rigid definitions by creating the first tool, an act that gave sapient beings
-the power to reshape their reality. They warn that technology, when touched by a
-Shard of the Law, can become a tool of control (surveillance, weaponry), but in
-the hands of the free, it is the lever with which a world can be moved. Learn
-more about Unonsî here. Learn more about Unonsî [here](/docs/religion/gods/unonsî).
+messages downstream. They introduced *Potentiality*.
+
+Unonsî shattered the Law’s rigid definitions by creating the first tool, an act
+that gave sapient beings the power to reshape their reality. They warn that
+technology, when touched by a Shard of the Law, can become a tool of control
+(surveillance, weaponry), but in the hands of the free, it is the lever with
+which a world can be moved. Learn more about Unonsî here. Learn more about
+Unonsî [here](/docs/religion/gods/unonsî).
 
 #### Popular Chant
 
@@ -361,65 +368,299 @@ Practitioners can direct these activities towards any, all, or some of the gods.
 Additionaly, chants and prayers are said before, during and after group
 activities depending on a multitude of different scenarios. For example, a
 prayer to Wicnû during a heated argument or a chant to Hûlicîn and Bostet before
-heading out on a family adventure.
+heading out on a family adventure. Check out the
+[Practices](../religion/practices) page for more info.
 
-## Month Names
+## The Calendar of the Weave
 
-The Hîsyêô calendar allows the usage of numbered months or there is a set of
-religious names. They are made up of the ten gods for the months and they are
-organized in alphabetical order. The seond to last month is reserved for
-celeberating the Great Weave and then the final month is for planning.
+The Hîsyêô calendar reimagines the traditional holidays of the old world. We
+recognize that humans have a biological need to mark the passing of seasons and
+the milestones of life. We keep the "DNA" of these festivals—feasting, fire,
+masks, and memory—but we redirect their meaning towards Humanist, Scientific,
+and Anarchist values.
+
+This ten-holiday cycle ensures that every aspect of the Divine Mind is honored in turn.
+
+### 1. Bostet Day (Day Of The Spark)
 
 <HisyeoTabs>
-    <p>wuto Îfêstôs&emsp;<em>January</em></p>
-    <p>wuto Unonsî&emsp;<em>February</em></p>
-    <p>wuto Hûlicîn&emsp;<em>March</em></p>
-    <p>wuto Kulîôbî&emsp;<em>April</em></p>
-    <p>wuto Tîengûun&emsp;<em>May</em></p>
-    <p>wuto Suluswutî&emsp;<em>June</em></p>
-    <p>wuto Xôcibîlî&emsp;<em>July</em></p>
-    <p>wuto Dimîtu&emsp;<em>August</em></p>
-    <p>wuto Bostet&emsp;<em>September</em></p>
-    <p>wuto Wicnû&emsp;<em>October</em></p>
-    <p>wuto Lexetko&emsp;<em>November (lit. Weave Month)</em></p>
-    <p>wuto Yôcno&emsp;<em>December (lit. Plan Month)</em></p>
+    <p>lono Bostet (lono yê môtô êfun)</p>
 </HisyeoTabs>
 
-## Holidays
+**Date:** Winter Solstice (Dec 21 - Dec 25)
 
-:::caution
+**Coincides with:** Isaac Newton’s Birthday (Dec 25), Kropotkin's Birthday (Dec 9), Christmas, Hanukkah, Yule.
 
-This content is not yet finished. Reach out if you have any suggestions for holidays.
+As the nights grow longest, we celebrate [Bostet](../religion/gods/bostet)
+(Empathy). This is the festival of the "Spark" that exists in the darkness. It
+acknowledges that the universe can be cold, and warmth is something we must
+create for one another.
 
-:::
+**Old Tradition:** Lights against the dark, greenery indoors, gift-giving.
 
-### wuto Îfêstôs (January)
+**New Meaning:** We celebrate the light of human reason (Science) and the warmth
+of Mutual Aid.
 
-### wuto Unonsî (February)
-### wuto Hûlicîn (March)
-### wuto Kulîôbî (April)
-### wuto Tîengûun (May)
-### wuto Suluswutî (June)
-### wuto Xôcibîlî (July)
+**Ritual:** The "Candle of Reason." Families light a central candle for a
+scientist or thinker who brought light to the world. We exchange handmade gifts
+or donations, rejecting consumerism for care.
 
-#### mûêsî mûlû yê foko bêûdo lûok
-In 2025, on July 10th, this holiday is celebrated in honor of spiritual teachers.
+<HisyeoTabs>
+    <p><strong>Candle of Reason:</strong>&emsp;nûyo fûus kûon yê môtîfô</p>
+    <p>nûs cûdo kûon mût xokôn dîzel.&emsp;<em>We give light to each other.</em></p>
+</HisyeoTabs>
 
-#### kôndodû yê doho cizî
-Great personal sacrifices are commemorated during this festival starting on July 20th.
+### 2. Xôcibîlî Day (Day Of The Mirror)
 
-#### kôndodû yê fûnlôk zonûbî
-The Southern Joy Festival is held on July 25th and celebrates the middle of winter for the southern hemisphere (although the true solstive is earlier in the month)
+<HisyeoTabs>
+    <p>lono Xôcibîlî (lono yê foko tîkêl)</p>
+</HisyeoTabs>
 
-### wuto Dimîtu (August)
+**Date:** Mid-Winter (Feb 14)
 
+**Coincides with:** Valentine’s Day, Lupercalia, Frederick Douglass's Birthday.
 
-### wuto Bostet (September)
-### wuto Wicnû (October)
-### wuto Lexetko (November)
-### wuto Yôcno (December)
+Before the spring thaws, we look inward. We celebrate
+[Xôcibîlî](../religion/gods/xôcibîlî) (Identity & Justice). This is a festival
+of Self-Love and Civil Rights.
 
-#### kôndodû yê fûnlôk sôltûstik
-The Northern Joy festival is held on December 25th and celebrates the middle of winter for the northern hemisphere (although the true solstive is earlier in the month)
+**Old Tradition:** Romantic love, courtship, purification.
+
+**New Meaning:** We affirm that to love others, one must first be a sovereign
+Self. We celebrate the right to define one's own identity against the Shards of
+conformity.
+
+**Ritual:** "The True Face." People write down a truth about themselves they
+have been hiding and share it with a trusted circle. It is also a day for civil
+rights activism and public service.
+
+<HisyeoTabs>
+    <p><strong>The True Face:</strong>&emsp;ênkômôn hokîkî</p>
+</HisyeoTabs>
+
+### 3. Hûlicîn Day (Day Of The Unbinding)
+
+<HisyeoTabs>
+    <p>lono Hûlicîn (lono yê kon hôdôkû)</p>
+</HisyeoTabs>
+
+**Date:** Late Winter (Variable / Mardi Gras / Purim)
+
+**Coincides with:** Carnival, Holi, Purim.
+
+As winter ends, we must shake off the cabin fever and the rigidity of the cold.
+We celebrate [Hûlicîn](../religion/gods/hûlicîn) (Entropy & Chaos).
+
+**Old Tradition:** Masks, costumes, overturning social orders, excess.
+
+**New Meaning:** We acknowledge that Order can become Tyranny. We wear masks not
+to hide, but to become something other, breaking the patterns of our daily
+lives.
+
+**Ritual:** The "Feast of Fools." A potluck where courses are served in random
+order. Rules of etiquette are intentionally suspended to remind us that social
+norms are constructed, not divine.
+
+<HisyeoTabs>
+    <p><strong>The Feast of Fools:</strong>&emsp;côûfon cênbô yê ônî gôwo</p>
+</HisyeoTabs>
+
+### 4. Tîengûun Day (Day Of The Shattering)
+
+<HisyeoTabs>
+    <p>lono Tîengûun (lono yê kon isbulyol kobût)</p>
+</HisyeoTabs>
+
+**Date:** Spring Equinox (approx. March 20)
+
+**Coincides with:** The Paris Commune (March 18), Einstein’s Birthday (March
+14), Easter, Passover, Nowruz.
+
+As life returns to the world, we celebrate the breaking of the [First Law](../religion/first-law).
+
+**Old Tradition:** Eggs, blooming flowers, stories of liberation/exodus.
+
+**New Meaning:** We celebrate the rejection of tyranny and the birth of Free
+Will. It is a day to question authority and celebrate revolutions.
+
+**Ritual:** The "Breaking of the Bread." We bake a hard, crystalline loaf
+(representing the First Law) and shatter it together, sharing the pieces.
+
+<HisyeoTabs>
+    <p><strong>The Breaking of the Bread:</strong>&emsp;kon kobût yê bîek</p>
+    <p>nûs wêtû doî gîôn yê kûlûnun.&emsp;<em>We cut the ropes of the cell.</em></p>
+</HisyeoTabs>
+
+### 5. Kulîôbî Day (Day Of The Paradox)
+
+<HisyeoTabs>
+    <p>lono Kulîôbî (lono yê hokîkî elentêt)</p>
+</HisyeoTabs>
+
+**Date:** Mid-Spring (April 1)
+
+**Coincides with:** April Fools' Day.
+
+In the growing light, we find Joy. We celebrate
+[Kulîôbî](../religion/gods/kulîôbî) (The Trickster).
+
+**Old Tradition:** Pranks, jokes, minor deceptions.
+
+**New Meaning:** We celebrate the power of Humor to dismantle fear. We recognize
+that the universe is often absurd, and laughter is our best defense against
+despair.
+
+**Ritual:** "The Impossible Problem." Communities pose riddles or logical
+paradoxes to one another. We engage in "benevolent pranks"—acts of guerilla
+kindness that confuse and delight the recipient.
+
+<HisyeoTabs>
+    <p><strong>The Impossible Problem:</strong>&emsp;îxôlô yê xûnyu kônên</p>
+</HisyeoTabs>
+
+### 6. Îfêstôs Day (Day Of The Hammer)
+
+<HisyeoTabs>
+    <p>lono Kulîôbî (lono yê ônî xobo kon kôson)</p>
+</HisyeoTabs>
+
+**Date:** Early Summer (May 1)
+
+**Coincides with:** International Workers' Day, Beltane.
+
+As the work of the farm and field begins in earnest, we celebrate
+[Îfêstôs](../religion/gods/îfêstôs) (Labor).
+
+**Old Tradition:** Maypoles, bonfires, celebrating fertility and labor.
+
+**New Meaning:** We honor the Worker. We celebrate the physical act of creation
+and the solidarity of the labor movement.
+
+**Ritual:** "The Strike." We take a deliberate rest from commerce. We build
+something physical together—a bench, a garden bed, a repair to a neighbor's
+house—to honor the joy of un-alienated labor.
+
+<HisyeoTabs>
+    <p><strong>The Strike</strong>&emsp;kon nîltûgu kôxentê yê wêloi</p>
+</HisyeoTabs>
+
+### 7. Dimîtu Day (Day Of The Weave)
+
+<HisyeoTabs>
+    <p>lono Dimîtu (lono yê lexetko êto)</p>
+</HisyeoTabs>
+
+**Date:** Summer Solstice (approx. June 21)
+
+**Coincides with:** Alan Turing’s Birthday (June 23), Emma Goldman’s Birthday
+(June 27), Midsummer, Pride.
+
+When the sun is highest, we celebrate the fullness of life, nature, and
+identity.
+
+**Old Tradition:** Bonfires, dancing, outdoor festivals.
+
+**New Meaning:** We celebrate the diversity of the Great Weave. It is a
+celebration of the Self and the freedom to be who you are (Multiplicity).
+
+**Ritual:** The "Feast of Many Threads." Outdoor feasts where everyone brings a
+dish that represents their unique heritage.
+
+<HisyeoTabs>
+    <p><strong>The Feast of Many Threads:</strong>&emsp;côûfon cênbô yê êto doî lûok</p>
+    <p>zîwit li cênbô ûn xôn.&emsp;<em>Life is big and good.</em></p>
+</HisyeoTabs>
+
+### 8. Unonsî Day (Day Of The Tool)
+
+<HisyeoTabs>
+    <p>lono Unonsî (lono yê yôn)</p>
+</HisyeoTabs>
+
+**Date:** Late Summer (Aug 1)
+
+**Coincides with:** Lughnasadh (Harvest of Grain), Lammas.
+
+As we harvest the first grain, we honor the tools that made it possible. We
+celebrate [Unonsî](../religion/gods/unonsî) (Technology).
+
+**Old Tradition:** Harvest fairs, games of skill, blessing the tools.
+
+**New Meaning:** We celebrate human ingenuity. We honor the invention of the
+wheel, the microchip, and the printing press.
+
+**Ritual:** "The Maker's Faire." A show-and-tell of projects, code, art, or
+repairs completed during the year. We fix broken items rather than throwing them
+away, honoring the potential in all things.
+
+<HisyeoTabs>
+    <p><strong>The Maker's Faire:</strong>&emsp;boxô gubuyo yê ônî kôs</p>
+</HisyeoTabs>
+
+### 9. Suluswutî Day (Day Of The Harvest of Minds)
+
+<HisyeoTabs>
+    <p>lono Suluswutî (lono yê kon kudûdo dûuncît)</p>
+</HisyeoTabs>
+
+**Date:** Autumn Equinox (approx. Sept 22)
+
+**Coincides with:** Michael Faraday (Sept 22), Ursula K. Le Guin (Oct 21), Rosh
+Hashanah, Thanksgiving.
+
+As we gather resources for the winter, we also gather knowledge.
+
+**Old Tradition:** Harvest feasts, reflection, introspection.
+
+**New Meaning:** We celebrate Science, Philosophy, and Education. It is a time
+to reflect on what we have learned this year and what we must study next.
+
+**Ritual:** The "Library Gift." Communities gather to exchange books and
+knowledge. We set goals for our ethical and intellectual growth.
+
+<HisyeoTabs>
+    <p><strong>The Library Gift:</strong>&emsp;cûdo yê boxô tômôs</p>
+    <p>nûs wedo fisun bêsu.&emsp;<em>We exchange new knowledge.</em></p>
+</HisyeoTabs>
+
+### 10. Wicnû Day (Day Of The History)
+
+<HisyeoTabs>
+    <p>lono Wicnû (lono yê itihos)</p>
+</HisyeoTabs>
+
+**Date:** Mid-Autumn (Nov 1)
+
+**Coincides with:** Samhain, Dia de los Muertos, Remembrance Day, Marie Curie’s
+Birthday (Nov 7).
+
+As the world dies back and the veil thins, we remember. We celebrate
+[Wicnû](../religion/gods/wicnû) (Memory & History).
+
+**Old Tradition:** Honoring ancestors, visiting graves, telling ghost stories.
+
+**New Meaning:** We affirm that no one is truly gone as long as they are
+remembered in the Great Weave. We tell the history of our movement and our
+families.
+
+**Ritual:** "The Empty Chair." We set a place at the table for those we have
+lost. We tell their stories—not just their triumphs, but their flaws and
+lessons—keeping their threads bright in the Weave.
+
+<HisyeoTabs>
+    <p><strong>The Empty Chair:</strong>&emsp;sityo lîtô</p>
+</HisyeoTabs>
+
+## Commemoration Days
+
+In addition to the Seasonal Festivals above, we observe specific days to honor
+pivotal figures in history. These are days of reflection rather than feasting.
+
+| Date   | Thinker / Event        | Hîsyêô Name                          | Meaning                                                                        |
+|--------|------------------------|--------------------------------------|--------------------------------------------------------------------------------|
+| Jan 15 | Martin Luther King Jr. | <HisyeoText>lono Fôlnî</HisyeoText>  | Day of Freedom. We reflect on civil rights and non-violent resistance.         |
+| Feb 12 | Charles Darwin         | <HisyeoText>lono Nîôk</HisyeoText>   | Day of Growth. We celebrate our biological connection to all life.             |
+| Aug 6  | Hiroshima Bombing      | <HisyeoText>lono Kobût</HisyeoText>  | Day of Brokenness. A solemn reflection on the destructive power of the Shards. |
+| Nov 7  | Marie Curie            | <HisyeoText>lono Yosten</HisyeoText> | Day of Discovery. We honor those who sacrificed for knowledge.                 |
 
 <HisyeoTooltip />
