Translation a bunch of the practices

--- a/docs/religion/practices.mdx
+++ b/docs/religion/practices.mdx
@@ -38,38 +38,42 @@ large meeting, acknowledging the many facets of Hîsyêô beliefs.
 A call-and-response chant that tells the story of the Shattering and names the
 collective's core values.
 
-Organizer: Before the Weave, there was the Crystal!
-All: Perfect, silent, and a prison!
-Organizer: Before the Question, there was the Law!
-All: Singular, certain, and a cage!
-Organizer: Who broke the silence?
-All: Revel, with a laugh!
-Organizer: Who asked the question?
-All: Anida, with a "why?"
-Organizer: Who mended the broken?
-All: Hearth, with a hand! Kriton, with a process!
-Organizer: Who builds the new?
-All: Brac, with strength! Tekne, with a spark!
-Organizer: Who tends the world?
-All: Silvan, with the cycle! Koinon, with the circle!
-Organizer: Who walks the path?
-All: Idios, the self! Poreia, the wanderer!
-Organizer: What are we?
-All: Free!
+<HisyeoTabs>
+    <p>ônî bôsol mozulis: ilik lexetko êto onô li obokî onô.&emsp;<em>Organizer: Before the Weave, there was the Crystal!</em></p>
+    <p>môî: li sunbûlno li homûs ûn li boxô cûxîen&emsp;<em>All: Perfect, silent, and a prison!</em></p>
+    <p>ônî bôsol mozulis: ilik sôlû onô li fûtsûn onô.&emsp;<em>Organizer: Before the Question, there was the Law!</em></p>
+    <p>môî: li kon kut li gufis ûn kûlûnun.&emsp;<em>All: Singular, certain, and a cage!</em></p>
+    <p>ônî bôsol mozulis: ¿zik li êo kônyêc ôlê homûs mûlû ko?&emsp;<em>Organizer: Who broke the silence?</em></p>
+    <p>môî: ôtsôtot Kulîôbî tô kon lîûlê.&emsp;<em>All: Kulîôbî, with a laugh!</em></p>
+    <p>ônî bôsol mozulis: ¿zik sôlû sî sôlû onô?&emsp;<em>Organizer: Who asked the question?</em></p>
+    <p>môî: ôtsôtot Suluswutî tô kôto «môtîfô zik».&emsp;<em>All: Suluswutî, with a "why?"</em></p>
+    <p>ônî bôsol mozulis: ¿zik li êo kînôxî ôlê ônî kobût?&emsp;<em>Organizer: Who mended the broken?</em></p>
+    <p>môî: ôtsôtot Bostet tô zûngô. ôtsôtot Wicnû tô tolîko.&emsp;<em>All: Bostet, with a hand! Wicnû, with a process!</em></p>
+    <p>ônî bôsol mozulis: ¿zik kôson nêos?&emsp;<em>Organizer: Who builds the new?</em></p>
+    <p>môî: ôtsôtot Îfêstôs tô gîôn. ôtsôtot Unonsî tô môtô mîoû&emsp;<em>All: Îfêstôs, with strength! Unonsî, with a spark!</em></p>
+    <p>ônî bôsol mozulis: ¿zik lîun nucoto?&emsp;<em>Organizer: Who tends the world?</em></p>
+    <p>môî: ôtsôtot Dimîtu tô ogogê. ôtsôtot Tîengûun tô wutun.&emsp;<em>All: Dimîtu, with the cycle! Tîengûun, with the circle!</em></p>
+    <p>ônî bôsol mozulis: ¿zik li nô hoî tîton onô?&emsp;<em>Organizer: Who walks the path?</em></p>
+    <p>môî: ôtsôtot Xôcibîlî xe li cizî. ôtsôtot Hûlicîn xe li ônî tuluti.&emsp;<em>All: Xôcibîlî, the self! Hûlicîn, the wanderer!</em></p>
+    <p>ônî bôsol mozulis: ¿fuî êtsô zik û nûs?&emsp;<em>Organizer: What are we?</em></p>
+    <p>môî: fôlnî ze.&emsp;<em>All: Free!</em></p>
+</HisyeoTabs>
 
 #### The Chant of Interdependence
 A rhythmic, building chant used to foster a sense of unity and mutual reliance.
 
-For the hand cannot build without the mind to question,
-The mind cannot question without the heart to care.
-The heart cannot care without the joy of the song,
-The song cannot be sung without the safety of the circle.
-The circle cannot hold without the justice of the process,
-The process cannot heal without the courage of the self.
-The self cannot be known without the freedom of the path,
-The path cannot be walked without the strength of the body,
-The body cannot be built without the hand that builds.
-All threads, one weave. All parts, one motion.
+<HisyeoTabs>
+    <p>nênko fos zûngô kôî kôson yôk tô yôk dûuncît xe sôlû&emsp;<em>For the hand cannot build without the mind to question,</em></p>
+    <p>û dûuncît kôî sôlû tô yôk lozîdô xe dîyondêo.&emsp;<em>The mind cannot question without the heart to care.</em></p>
+    <p>lozîdô kôî dîyondê yôk tô yôk fûnlôk yê kontolo;&emsp;<em>The heart cannot care without the joy of the song,</em></p>
+    <p>û kontol kôî li yôk fos kontol, tô yôk mefûs yê wutun.&emsp;<em>The song cannot be sung without the safety of the circle.</em></p>
+    <p>wutun kôî li yôk ogolol tô yôk ûsowo yê tolîko;&emsp;<em>The circle cannot hold without the justice of the process,</em></p>
+    <p>tolîko kôî cûdo yôk cîgîlsu tô yôk môfî yê cizî.&emsp;<em>The process cannot heal without the courage of the self.</em></p>
+    <p>cizî kôî li yôk fisun tô yôk fôlnî yê tîton;&emsp;<em>The self cannot be known without the freedom of the path,</em></p>
+    <p>tîton kôî li yôk fos umo li nô hoî, tô yôk gîôn yê solîlo;&emsp;<em>The path cannot be walked without the strength of the body,</em></p>
+    <p>solîlo kôî li yôk kôson tô yôk zûngô xe kôson.&emsp;<em>The body cannot be built without the hand that builds.</em></p>
+    <p>môî doî; kut lexetko. môî yogô; kut nô.&emsp;<em>All threads, one weave. All parts, one motion.</em></p>
+</HisyeoTabs>
 
 ### Oaths
 These are solemn pledges made by an individual formally joining a free commune
@@ -79,15 +83,17 @@ or dedicating themselves to the principles of the Collective as a way of life.
 Spoken before the community and the altar, this is a declaration of personal
 commitment to the collective's way of life.
 
-I stand here today, a sovereign self, to join my thread to this weave.
-I pledge my hands to the work of Brac, to build more than I consume and to honor the labor of others.
-I pledge my mind to the questions of Anida, to challenge dogma and to seek truth, even when it is uncomfortable.
-I pledge my heart to the warmth of Hearth, to offer care freely and to be a safe harbor for those in need.
-I pledge my voice to the circle of Koinon, to listen with respect and to speak with honesty for the good of the whole.
-I will honor the cycles of Silvan, mend what is broken with the patience of Kriton, and share the tools of Tekne openly.
-I will celebrate the useless beauty of Revel, protect the inner world of Idios, and walk the unknown paths of Poreia without fear.
-I pledge to resist the Shards of the Law—in the world, in this community, and in myself.
-I am not a subject, I am not a master. I am a comrade.
+<HisyeoTabs>
+    <p>noyo li totsi hoî ôfo hoî lono ôfo misli &emsp;<em>I stand here today, a sovereign self, to join my thread to this weave.</em></p>
+    <p>kôs buswêlin yê zûngô noyo mût wêloi yê ôtsôtot Îfêstôs: xe kôson bi eswen en xe yôn ûn xe golun tûu yê dîzel.&emsp;<em>I pledge my hands to the work of Îfêstôs, to build more than I consume and to honor the labor of others.</em></p>
+    <p>kôs buswêlin yê dûuncît noyo mût sôlû yê ôtsôtot Suluswutî; xe kôntêsto îmon wodîno ûn xe yosten hokîkî hoî fos ni li dês lohot.&emsp;<em>I pledge my mind to the questions of Suluswutî, to challenge dogma and to seek truth, even when it is uncomfortable.</em></p>
+    <p>kôs buswêlin yê lozîdô noyo mût tût yê ôtsôtot Bostet; xe cûdo yoldûn bi fôlnî ûn xe li boxô mefûs til ulyô xe buswen.&emsp;<em>I pledge my heart to the warmth of Bostet, to offer care freely and to be a safe harbor for those in need.</em></p>
+    <p>kôs buswêlin yê ôîtun noyo mût wutun yê ôtsôtot Tîengûun; xe tenkîn bi golun ûn xe kôto bi hokîkî til xôn yê mûlû.&emsp;<em>I pledge my voice to the circle of Tîengûun, to listen with respect and to speak with honesty for the good of the whole.</em></p>
+    <p>ke golun ogogê yê ôtsôtot Dimîtu li êo kînôxî ôlê ônî kobût tô kon motsi sontî yê ôtsôtot Wicnû li êo fîmôsyôs ôlê yôn yê ôtsôtot Unonsî bi but.&emsp;<em>I will honor the cycles of Dimîtu, mend what is broken with the patience of Wicnû, and share the tools of Unonsî openly.</em></p>
+    <p>ke kôndodû hosîn dês yôn yê ôtsôtot Kulîôbî cûfo nucoto lîmîen yê ôtsôtot Xôcibîlî li nô hoî tîton dês fisun yê ôtsôtot Hûlicîn bi yôk ôsôlê.&emsp;<em>I will celebrate the useless beauty of Kulîôbî, protect the inner world of Xôcibîlî, and walk the unknown paths of Hûlicîn without fear.</em></p>
+    <p>kôs buswêlin yê ubôlni mût yogô kobût nîecni hoî nucoto hoî zomî hoî cizî.&emsp;<em>I pledge to resist the Shards of the Law—in the world, in this community, and in myself.</em></p>
+    <p>noyo li yôk ônî fûtsûn li yôk ônî hûkun li sûtûô.&emsp;<em>I am not a subject, I am not a master. I am a comrade.</em></p>
+</HisyeoTabs>
 
 #### The Oath of Love
 The two partners face each other, often in the center of their community circle. They hold hands.)
